[gd_scene load_steps=21 format=3 uid="uid://yx8but0chgsv"]

[ext_resource type="Script" uid="uid://nnkqct4dlheu" path="res://main_boss4.gd" id="1_4v2oj"]
[ext_resource type="Texture2D" uid="uid://ddmyrsw1o07vv" path="res://assets/circle-png-15288.png" id="2_e7fsd"]
[ext_resource type="Texture2D" uid="uid://cq8c7m4xqtpns" path="res://assets/big_worm.png" id="3_0gdt5"]
[ext_resource type="Script" uid="uid://wboxhavv1kek" path="res://SCENES/worm_spawner4.gd" id="4_0gdt5"]
[ext_resource type="PackedScene" uid="uid://dgqvlebmccfns" path="res://SCENES/mini_worm4.tscn" id="5_2g7aj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2g7aj"]
radius = 28.0179

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f8wbo"]
height = 46.0

[sub_resource type="AtlasTexture" id="AtlasTexture_tc07e"]
atlas = ExtResource("3_0gdt5")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3l7t"]
atlas = ExtResource("3_0gdt5")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi1sa"]
atlas = ExtResource("3_0gdt5")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxlhl"]
atlas = ExtResource("3_0gdt5")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_alqwx"]
atlas = ExtResource("3_0gdt5")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0fl3"]
atlas = ExtResource("3_0gdt5")
region = Rect2(192, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qmrnh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc07e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3l7t")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi1sa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxlhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alqwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0fl3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_inrw5"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.201228, 0.39968, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_cyg4l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerDetection/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6cno5"]
resource_name = "attack"
length = 1.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"attack", &"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.904292, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.298634, 0.600624, 0.899259),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.998244, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerDetection/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.998244, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0by6m"]
_data = {
&"RESET": SubResource("Animation_cyg4l"),
&"attack": SubResource("Animation_6cno5"),
&"idle": SubResource("Animation_inrw5")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7eat6"]
radius = 28.6356

[sub_resource type="CircleShape2D" id="CircleShape2D_0gdt5"]
radius = 18.6815

[node name="MainBoss" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_4v2oj")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_2g7aj")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="HitBox"]
visible = false
position = Vector2(0, -1)
scale = Vector2(0.028, 0.027125)
texture = ExtResource("2_e7fsd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_f8wbo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qmrnh")
animation = &"attack"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0by6m")
}
autoplay = "idle"

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(1, -2)
shape = SubResource("CircleShape2D_7eat6")

[node name="WormSpawner" type="Node2D" parent="."]
script = ExtResource("4_0gdt5")
mini_worm_node = ExtResource("5_2g7aj")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="HitboxArea" type="Area2D" parent="." groups=["enemy_hitbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_0gdt5")

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_entered"]
[connection signal="timeout" from="Timer" to="WormSpawner" method="_on_timer_timeout"]
